# cppnativetestapp

./: settings.gradle
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/games_v2/include/c/: playgamesclient.h
app/src/main/cpp/games_v2/include/c/android/content/: content_provider.h  content_values.h  intent.h
app/src/main/cpp/games_v2/include/c/android/database/: cursor.h
app/src/main/cpp/games_v2/include/c/android/graphics/: bitmap.h
app/src/main/cpp/games_v2/include/c/android/net/: uri.h
app/src/main/cpp/games_v2/include/c/android/os/: bundle.h  parcel.h  parcel_file_descriptor.h  parcelable.h
app/src/main/cpp/games_v2/include/c/gni/: gni.h  gni_task.h  gni_task_error_codes.h
app/src/main/cpp/games_v2/include/c/java/lang/: enum.h  (+5 more)
app/src/main/cpp/games_v2/include/c/pgs/: pgs_achievements_client.h  pgs_annotated_data.h  pgs_authentication_result.h  pgs_current_player_info.h  pgs_events_client.h  pgs_friends_resolution_required_exception.h  pgs_game.h  pgs_game_buffer.h  pgs_game_entity.h  pgs_games_activity_result_codes.h  pgs_games_callback_status_codes.h  pgs_games_client_status_codes.h  pgs_games_sign_in_client.h  pgs_leaderboards_client.h  pgs_page_direction.h  pgs_play_games.h  pgs_play_games_sdk.h  pgs_player.h  pgs_player_buffer.h  pgs_player_entity.h  pgs_player_level.h  pgs_player_level_info.h  pgs_player_relationship_info.h  pgs_player_stats_client.h  pgs_players_client.h  pgs_recall_access.h  pgs_recall_client.h  pgs_snapshots_client.h
app/src/main/cpp/games_v2/src/c/: playgamesclient.cpp
app/src/main/cpp/games_v2/src/c/gni/: gni.cc  gni_task.cc  gni_task_error_codes.cc  gni_task_internal.h
app/src/main/cpp/games_v2/src/c/pgs/: pgs_achievements_client.cc  pgs_annotated_data.cc  pgs_authentication_result.cc  pgs_current_player_info.cc  pgs_events_client.cc  pgs_friends_resolution_required_exception.cc  pgs_game.cc  pgs_game_buffer.cc  pgs_game_entity.cc  pgs_games_activity_result_codes.cc  pgs_games_callback_status_codes.cc  pgs_games_client_status_codes.cc  pgs_games_sign_in_client.cc  pgs_leaderboards_client.cc  pgs_page_direction.cc  pgs_play_games.cc  pgs_play_games_sdk.cc  pgs_player.cc  pgs_player_buffer.cc  pgs_player_entity.cc  pgs_player_level.cc  pgs_player_level_info.cc  pgs_player_relationship_info.cc  pgs_player_stats_client.cc  pgs_players_client.cc  pgs_recall_access.cc  pgs_recall_client.cc  pgs_snapshots_client.cc
app/src/main/cpp/games_v2/src/cpp/gni/: gni.cpp  gni.hpp  object.cpp  object.hpp  task.cpp  task.hpp
(+285 files in other folders)
